Renumbering of steps.

--- a/README
+++ b/README
@@ -15,23 +15,23 @@ You should ensure you study the scripts. This lesson is just to get you started.
 
 STEPS
 #####
-Change directory to Lesson01.
-Then do the following.
+1. Change directory to Lesson01.
+	Then do the following.
 
-1. Create an sqlite3 database:
+2. Create an sqlite3 database:
 	touch Volcanoes.db 
    This will create a zero byte file. Next you create the table(s) in the database.
-2. Create the tables by running the script CreateTable.sql
+3. Create the tables by running the script CreateTable.sql
 	sqlite3 Volcanoes.db < CreateTable.sql
    This will create the table(s) with the settings you specify. Next you add data.
-3. Check the export file and ensure it is comma delimited.
+4. Check the export file and ensure it is comma delimited.
 	1,"Pelee","Violent","Martinique",0,"1932",
 	2,"Mauna Loa","Quiet","Hawaii",10,"1984",
 	3,"Tarawera","Violent","New Zealand",0,"1886",
-4. Run import_data.py:
+5. Run import_data.py:
 	python import_data.py
    Because this file was an export from MS Access, the script uses the option "utf-8-sig" as the first bytes of the file are the codec.
-5. Run selectAll.sql:
+6. Run selectAll.sql:
 	sqlite3 Volcanoes < selectAll.sql
    Now you have a populated table in your database.
 
